[package]
name = "arca"
version = "0.1.0"
authors = ["Benjamin Flin <brf2117@columbia.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["postgres", "uuid"] }
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-files = "0.2.2"
