[package]
name = "arca"
version = "0.1.0"
authors = ["Benjamin Flin <brf2117@columbia.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-files = "0.2.2"
bcrypt = "0.8.1"
serde = "1.0.114"
serde_derive = "1.0.114"
publicsuffix = "1.5.4"
actix-http = "1.0.1"
uuid = { version = "0.8.1", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2"] }
nix = "0.18.0"
actix-service = "1.0.5"
actix-session = "0.3.0"
tokio = { version = "0.2.22", features=["fs"] } 
